tcp: cache the consumer head producer-side on the receive ring (#414)

The RX consumer's fLock hold paid an acquire-load of the consumer-dirtied
fHead line in HasFreeSlot(), Push() and FreeSlots() -- plus one more of
fBytesConsumed via _AddData()'s closing _ReceiveAvailable() -- on every
in-order segment, each a cross-core cache-line transfer while the reader
drains on another CPU. Keep a producer-owned cached copy of the head,
refreshed only once the cached view shows the ring half full: the head only
advances, so staleness under-counts free slots (Push() never overruns, the
advertised window only skews smaller, bounded by the refresh threshold).
_AddData()'s fast path now also skips the byte-counter load outright --
having just pushed data, there is trivially something to wake the reader
for. At high occupancy the refresh degenerates to the old one-load-per-call
behaviour, so this is never a regression.